[package]
name = "bgg"
version = "0.4.4"
authors = ["wordtinker"]
edition = "2018"

[dependencies]
structopt = "0.2.14"
failure = "0.1.5"
exitfailure ="0.5.1"
reqwest = "0.9.9"
select = "0.4.2"
serde = "1.0.86"
serde_derive = "1.0.86"
serde_json = "1.0.38"
prettytable-rs = "0.8.0"
indicatif = "0.11.0"
