[package]
name = "bgg"
version = "0.5.0"
authors = ["wordtinker"]
edition = "2018"

[dependencies]
structopt = "0.3.26"
failure = "0.1.8"
exitfailure ="0.5.1"
reqwest = "0.9.9"
select = "0.5.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
prettytable-rs = "0.9.0"
indicatif = "0.17.1"
